fix: hide page dots on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -785,7 +785,7 @@ body {
   }
 
   .page-dots {
-    right: 10px;
+    display: none;
   }
 
   .iassets-card-wrap {
